// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`features/security/SecurityBadge should render a classified badge with a custom icon 1`] = `
<h1
  className="bdl-SecurityBadge"
  style={
    Object {
      "backgroundColor": undefined,
      "borderColor": undefined,
    }
  }
>
  <span>
    Custom Icon
  </span>
  <span
    className="bdl-SecurityBadge-name"
  >
    Suspicious
  </span>
</h1>
`;

exports[`features/security/SecurityBadge should render a classified badge with default icon (IconAlertDefault) 1`] = `
<h1
  className="bdl-SecurityBadge"
  style={
    Object {
      "backgroundColor": undefined,
      "borderColor": undefined,
    }
  }
>
  <IconAlertDefault
    color="#f5b31b"
    height={22}
    strokeWidth={3}
    width={22}
  />
  <span
    className="bdl-SecurityBadge-name"
  >
    Suspicious
  </span>
</h1>
`;
